ucs-school-import (15.0.0-18) unstable; urgency=low

  * Bug #45024: block installation of Python 3 version of Celery

 -- Daniel Troeder <troeder@univention.de>  Wed, 02 Aug 2017 01:31:09 +0200

ucs-school-import (15.0.0-17) unstable; urgency=low

  * Bug #45022: lower case resource attributes

 -- Daniel Troeder <troeder@univention.de>  Tue, 01 Aug 2017 11:49:25 +0200

ucs-school-import (15.0.0-16) unstable; urgency=low

  * Bug #45024: add support for user type
  * make user_role choices match ucsschool-lib type names
  * fix logging in celery task
  * handle non-existent artifacts
  * add 'id' property to UserImportJob resource
  * add 'name' property to School resource
  * Bug #45022: complete makeover of client API
  * fix module installation path
  * handle resources in separate classes
  * accept ID instead of URL as object identifier
  * add exception classes for most common errors
  * add support for user type
  * make SSL certificate verification optional

 -- Daniel Troeder <troeder@univention.de>  Tue, 01 Aug 2017 11:18:45 +0200

ucs-school-import (15.0.0-15) unstable; urgency=low

  * Bug #45024: add endpoints for logfile, password and summary subresources
  * make subresources not appear in API root anymore
  * initialize School list in join script
  * create Django superuser (Administrator)
  * filter objects in admin view
  * allow imports with empty school string from below school URI (WIP: should
    be without school argument)
  * load text artifacts only in detail view from disk, not in list view

 -- Daniel Troeder <troeder@univention.de>  Fri, 28 Jul 2017 07:57:36 +0200

ucs-school-import (15.0.0-14) unstable; urgency=medium

  * Bug #45026: add object class, attributes for UCS@school groups

 -- Florian Best <best@univention.de>  Thu, 27 Jul 2017 14:04:11 +0200

ucs-school-import (15.0.0-13) unstable; urgency=low

  * Bug #45024: fix configuration names for Celery < 4.0
  * use full python path for all imports