@@ -1,6 +1,10 @@
 ucs-school-import (15.0.0-18) unstable; urgency=low
 
   * Bug #45024: block installation of Python 3 version of Celery
+  * Bug #45022: make client lib pythonic
+  * dynamically find resource URLs
+  * auto-register resource classes
+  * expicitely request JSON
 
  -- Daniel Troeder <troeder@univention.de>  Wed, 02 Aug 2017 01:31:09 +0200
 
